# AstroBox-NG

./: .gitignore  AGENTS.md  LICENSE  README.md  abtools.py  package.json  pnpm-lock.yaml  postcss.config.js  repos.xml  rsbuild.config.ts  tailwind.config.cjs  tsconfig.json
.github/: copilot-instructions.md
scripts/: build_android.sh  build_android_debug.sh  code_dump.py  debug_android_open_export.sh  decrypt_companion_device.py  generate-licenses.js  tauri-runner.mjs  tauri.local.json
src-tauri/: .gitignore  .taurignore  Cargo.toml
src-tauri/.cargo/: config.toml
src-tauri/plugins/: README.md
