[workspace]
members = [
    "modules/app",
    "modules/app_esp32s3",
    "modules/app_wasm",
    "modules/bluetooth",
    "modules/core",
    "modules/pb",
    "modules/pluginsystem",
    "modules/provider",
    "plugins/btclassic-spp",
    "plugins/live-activity",
]
exclude = [
    "modules/app_esp32c3",
]
resolver = "3"

default-members = [
    "modules/app",
]
